    still needed.
  * Fix astgenkey to respect system's umask. Thanks Jonas Smedegaard.
    (Closes: #531730) 
  * Create /var/log/asterisk/* directories if non-existent, for /var/log on
    tmpfs scenarios. Thanks martin f krafft! (Closes: #524015)
  * Use the lsb-base standard way of gathering and reporting status in the
    init script. Thanks Dustin Kirkland and Ubuntu! (Closes: #506453)

  [ Tzafrir Cohen ]
  * New upstream release.
    - Fixes that bashism in safe_asterisk (Closes: #530047) (not dashism).
    - Dropped patch astcanary_startup: merged upstream.
  * Patch makefile_appdocs_dtd: fix location of DTD installation.
  * Register the HTML docs with doc-base as well.

  [ Lionel Elie Mamane ]
  * Install UPGRADE-1.6.txt, useful for people upgrading from lenny

 -- Faidon Liambotis <paravoid@debian.org>  Mon, 27 Jul 2009 22:13:15 +0300

asterisk (1:1.6.1.0~dfsg-1) unstable; urgency=low

  * New upstream release (Closes: #522528).

  [ Tzafrir Cohen ]
  * Depend explicitly on dahdi.
  * Patch apptest_sleep dropped: merged upstream.
  * Patch libtonezone_libm dropped: merged upstream.
  * Patch h323-make-fix dropped: merged upstream.
  * Use upstream's asterisk.conf rather than our bogus one.
  * Also add the version-specific release summary. 
  * Patch dahdi_ptmp_nt: (not really) chan_dahdi PtMP NT support 
    (Kristijan Vrban).
  * Patch dahdi_pri_debug_spannums: add span number in PRI trace. 
  * Patch astcanary_startup: Avoid a false death of the canary 
    (Closes: #528497).
  * Patch hardware_dtmf_mute_fix: Fix muting of DAHDI channels with hardware
    DTMF detection.

 -- Mark Purcell <msp@debian.org>  Wed, 20 May 2009 08:00:23 +1000

asterisk (1:1.6.1.0~dfsg~rc3-1) experimental; urgency=low

  [ Tzafrir Cohen ]
  * Experimental 1.6.x branch.
  * Remove bristuff for now.
  * Also drop zap-fix-deadlock and zap-fix-cause34 that are in bristuff code.
  * And likewise the example agi/xagi-test.c .