@@ -3,4 +3,5 @@ README
 CREDITS
 UPGRADE.txt
 UPGRADE-1.6.txt
+Zaptel-to-DAHDI.txt
 CHANGES
