@@ -29,6 +29,9 @@ asterisk (1:1.6.2.0~dfsg~beta3-1) UNRELEASED; urgency=low
     tmpfs scenarios. Thanks martin f krafft! (Closes: #524015)
   * Use the lsb-base standard way of gathering and reporting status in the
     init script. Thanks Dustin Kirkland and Ubuntu! (Closes: #506453)
+  * Fix debian/rules so that configure isn't called twice during a build.
+  * Install Zaptel-to-DAHDI.txt, explains the migration procedure from Zaptel
+    to DAHDI and is therefore useful when upgrading from lenny.
 
   [ Tzafrir Cohen ]
   * New upstream release.
@@ -40,7 +43,7 @@ asterisk (1:1.6.2.0~dfsg~beta3-1) UNRELEASED; urgency=low
   [ Lionel Elie Mamane ]
   * Install UPGRADE-1.6.txt, useful for people upgrading from lenny
 
- -- Faidon Liambotis <paravoid@debian.org>  Mon, 27 Jul 2009 22:13:15 +0300
+ -- Faidon Liambotis <paravoid@debian.org>  Mon, 27 Jul 2009 23:34:23 +0300
 
 asterisk (1:1.6.1.0~dfsg-1) unstable; urgency=low
 
